<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/firth_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorIconBlue"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg_back_white_blue"
            android:onClick="back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/change_id"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lTextSize"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rec_bg_corner_white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/tape_id"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rec_bg_corner_white"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="center"
                android:hint="@string/input_id"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/tomato"
                android:textColorHint="@color/gray4"
                android:textSize="@dimen/xlTextSize"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/corner_rec_bg_blue_press"
            android:onClick="tape"
            android:text="@string/tape"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>