<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        android:src="@mipmap/main_image1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rect_bg_white_gray_press"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/blue_teeth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/blue_teeth"
            android:textSize="@dimen/lTextSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:gravity="center_vertical|right"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/lTextSize"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/switch_blue_teeth"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/switch_on_off"
            android:button="@null"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rect_bg_white_gray_press"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/wi_fi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/wi_fi"
            android:textSize="@dimen/lTextSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:gravity="center_vertical|right"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/lTextSize"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/switch_wi_fi"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/switch_on_off"
            android:button="@null"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_more_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rect_bg_white_gray_press"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="moreFunction"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/more_function"
            android:textSize="@dimen/lTextSize" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_right_press" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/tape_id"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rec_bg_corner_white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center"
            android:hint="@string/input_id"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:textColor="@color/tomato"
            android:textColorHint="@color/gray4"
            android:textSize="@dimen/xlTextSize"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_tape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_rec_bg_blue_press"
        android:onClick="tape"
        android:text="@string/tape"
        android:textColor="@color/white" />
</LinearLayout>
