<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorIconBlue"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg_back_white_blue"
            android:onClick="back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/system_setting"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lTextSize"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rect_bg_white_gray_press"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="changeId"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/change_id"
            android:textSize="@dimen/lTextSize" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_right_press" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rect_bg_white_gray_press"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="safeTipFrequency"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/safe_tip_frequency"
            android:textSize="@dimen/lTextSize" />

        <TextView
            android:id="@+id/textview_safe_tip_frequency"
            android:gravity="center_vertical|right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_right_press" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rect_bg_white_gray_press"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/system_info"
            android:textSize="@dimen/lTextSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:gravity="center_vertical|right"
            android:maxLines="1"
            android:textSize="@dimen/lTextSize"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/switch_system_info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/switch_on_off"
            android:button="@null"
            android:checked="false" />
    </LinearLayout>
</LinearLayout>